# resources

./: .gitignore  .pre-commit-config.yaml  README.md  SConstruct  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  types.txt
.github/workflows/: black.yaml  build.yaml  build_docs.yaml  docstyle.yaml  formatting.yaml  lint.yaml  mypy.yaml
doc/: conf.py  index.rst  manifest.yaml
doc/changes/: DM-27355.feature.rst  DM-31723.feature.rst  DM-32482.feature.rst  DM-33394.misc.rst  DM-33597.misc.rst  DM-33769.feature.rst  DM-35446.misc.rst
doc/lsst.butlerUri/: CHANGES.rst  index.rst
python/lsst/: __init__.py
python/lsst/butlerUri/: __init__.py  _butlerUri.py  file.py  http.py  location.py  mem.py  packageresource.py  s3.py  s3utils.py  schemeless.py  utils.py
python/lsst/resources/: __init__.py  _resourcePath.py  file.py  gs.py  http.py  location.py  mem.py  packageresource.py  s3.py  s3utils.py  schemeless.py  tests.py  utils.py
python/lsst/resources/_resourceHandles/: _baseResourceHandle.py  _fileResourceHandle.py  _s3ResourceHandle.py
tests/: test_http.py  test_location.py  test_s3.py  test_s3utils.py  test_uri.py  test_webdavutils.py
ups/: resources.cfg  resources.table
