[metadata]
name = lsst-resources
description = An abstraction layer for reading and writing from URI file resources.
author = Rubin Observatory Data Management
url = https://github.com/lsst/resources
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy
readme = file: README.md

[options]
zip_safe = True
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  lsst_utils @ git+https://github.com/lsst/utils@main
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0

[options.packages.find]
where=python

[options.package_data]
lsst.resources = py.typed

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = N802, N803, N806, N812, N815, N816, W503, E203
exclude = __init__.py

[tool:pytest]
addopts = --flake8
flake8-ignore = N802 N803 N806 N812 N815 N816 W503 E203

[pydocstyle]
convention = numpy
# Our coding style does not require docstrings for magic methods (D105)
# Our docstyle documents __init__ at the class level (D107)
# We allow methods to inherit docstrings and this is not compatible with D102.
# Docstring at the very first line is not required
# D200, D205 and D400 all complain if the first sentence of the docstring does
# not fit on one line.
add-ignore = D107, D105, D102, D100, D200, D205, D400
